--- a/jenkins-plugins-upgrade.yaml
+++ b/jenkins-plugins-upgrade.yaml
@@ -20,8 +20,8 @@
 
     - name: Upgrade Jenkins plugins
       command: "java -jar /tmp/jenkins-cli.jar -s '{{ jenkins_url }}' -auth '{{ jenkins_username }}:{{ jenkins_password }}' install-plugin '{{ item.name }}' -deploy"
-      loop: "{{ installed_plugins.stdout_lines }}"
-      when: item.hasUpdate | bool
+      loop: "{{ installed_plugins_before.stdout_lines }}"
+      changed_when: true
 
     - name: Get installed plugins (after upgrade)
       shell: "java -jar /tmp/jenkins-cli.jar -s '{{ jenkins_url }}' -auth '{{ jenkins_username }}:{{ jenkins_password }}' list-plugins"
