--- a/jenkins-plugins-upgrade.yaml
+++ b/jenkins-plugins-upgrade.yaml
@@ -25,8 +25,7 @@
     - name: Show all the hosts in the current play
       ansible.builtin.debug:
        msg: 
-        - "{{ item.name }}"
-        - "{{ item.version }}"
+        - "{{ item.stdout }}"
       loop: "{{ list_installed_plugins }}"
 
 #    - name: Upgrade Jenkins plugins
