--- a/jenkins-plugins-upgrade.yaml
+++ b/jenkins-plugins-upgrade.yaml
@@ -26,9 +26,9 @@
       ansible.builtin.debug:
        msg: 
          - "******************************************************************************"
-         - "{{ item }}"
+         # - "{{ item }}"
+         - "{{ item.name }}"
          - "******************************************************************************"
-        # - "{{ item.name }}"
         # - "{{ item.version }}"
       loop: "{{ list_installed_plugins }}"
 
