--- a/jenkins-plugins-upgrade.yaml
+++ b/jenkins-plugins-upgrade.yaml
@@ -26,8 +26,8 @@
       ansible.builtin.debug:
        msg: 
          - "******************************************************************************"
-         # - "{{ item }}"
-         - "{{ item.name }}"
+         - "{{ item }}"
+         # - "{{ item.name }}"
          - "******************************************************************************"
         # - "{{ item.version }}"
       loop: "{{ list_installed_plugins }}"
