--- a/jenkins-plugins-upgrade.yaml
+++ b/jenkins-plugins-upgrade.yaml
@@ -26,7 +26,7 @@
       ansible.builtin.debug:
        msg: 
          - "******************************************************************************"
-         - "{{ item.stdout_lines }}"
+         - "{{ item.stdout }}"
          # - "{{ item.name }}"
          - "******************************************************************************"
         # - "{{ item.version }}"
