--- a/jenkins-plugins-upgrade.yaml
+++ b/jenkins-plugins-upgrade.yaml
@@ -30,7 +30,7 @@
          # - "{{ item.name }}"
          - "******************************************************************************"
         # - "{{ item.version }}"
-      loop: "{{ installed_plugins }}"
+      loop: "{{ list_installed_plugins }}"
 
     - name: Show all the hosts in the current play 2222222222
       ansible.builtin.debug:
