--- a/jenkins-plugins-upgrade.yaml
+++ b/jenkins-plugins-upgrade.yaml
@@ -25,8 +25,8 @@
     - name: Show all the hosts in the current play
       ansible.builtin.debug:
        msg: 
-         - "{{ item }}"
-      loop: "{{ list_installed_plugins | list }}"
+         - "{{ item.name }}"
+      loop: "{{ list_installed_plugins.stdout}}"
 
 
 #    - name: Upgrade Jenkins plugins
