--- a/jenkins-plugins-upgrade.yaml
+++ b/jenkins-plugins-upgrade.yaml
@@ -26,9 +26,9 @@
         msg: "{{ item }}"
       loop: "{{ plugin_info }}"
 
-    - name: Check for plugin updates
-      set_fact:
-        plugins_with_updates: "{{ plugin_info | json_query('[?contains(@, \'(update available)\')]') }}"
+    # - name: Check for plugin updates
+    #   set_fact:
+    #     plugins_with_updates: "{{ plugin_info | json_query('[?contains(@, \'(update available)\')]') }}"
 
     # - name: Check for plugin updates
     #   command: java -jar /tmp/jenkins-cli.jar -s '{{ jenkins_url }}' -auth '{{ jenkins_username }}:{{ jenkins_password }}' list-plugins --filter hasUpdate=true --short
@@ -48,11 +48,16 @@
     #   loop: "{{ plugins_updates.stdout_lines }}"
     #   when: plugins_updates.stdout_lines | length > 0
 
-#    - name: Upgrade Jenkins plugins
-#      command: "java -jar /tmp/jenkins-cli.jar -s '{{ jenkins_url }}' -auth '{{ jenkins_username }}:{{ jenkins_password }}' install-plugin '{{ item }}' -deploy"
-#      loop: "{{ installed_plugins.stdout_lines }}"
-#      changed_when: true
+   - name: Upgrade Jenkins plugins
+     command: "java -jar /tmp/jenkins-cli.jar -s '{{ jenkins_url }}' -auth '{{ jenkins_username }}:{{ jenkins_password }}' install-plugin '{{ item }}' -deploy"
+     loop: "{{ installed_plugins.stdout_lines }}"
+     changed_when: true
 
-#    - name: Get installed plugins (after upgrade)
-#      shell: "java -jar /tmp/jenkins-cli.jar -s '{{ jenkins_url }}' -auth '{{ jenkins_username }}:{{ jenkins_password }}' list-plugins"
-#      register: installed_plugins_after
+   - name: Get installed plugins (after upgrade)
+     shell: "java -jar /tmp/jenkins-cli.jar -s '{{ jenkins_url }}' -auth '{{ jenkins_username }}:{{ jenkins_password }}' list-plugins"
+     register: installed_plugins_after
+
+   - name: Display plugin names and versions after upgradation
+      debug:
+        msg: "{{ item }}"
+      loop: "{{ installed_plugins_after }}"
