--- a/jenkins-plugins-upgrade.yaml
+++ b/jenkins-plugins-upgrade.yaml
@@ -38,4 +38,4 @@
     - name: Display plugin names and versions after upgradation
       debug:
         msg: "{{ item }}"
-      loop: "{{ installed_plugins_after }}"
+      loop: "{{ installed_plugins_after.stdout_lines[1:] | map('regex_replace', '^([^ ]+)[^0-9]+([0-9].*)$', '\\1:\\2') | list }}"
